k8s-manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: static-server-svc
spec:
  selector:
    app: static-server
  ports:
  - port: 3000
    targetPort: 3000
